deploy: c39e8d88e6e1cf8d624acee71bdbf1176b9ae172

--- a/openapi/ih-resolution-api/0.5.2-SNAPSHOT/ih-resolution-api.yaml
+++ b/openapi/ih-resolution-api/0.5.2-SNAPSHOT/ih-resolution-api.yaml
@@ -6,7 +6,7 @@ info:
 servers:
 - url: /
 paths:
-  /v1/participants/{participantId}/presentation/query:
+  /v1/participants/{participantId}/presentations/query:
     post:
       tags:
       - Resolution API
