deploy: a854cb09bc359414148601c210ac8522c8072def

--- a/openapi/identity-api/0.8.1-SNAPSHOT/identity-api.yaml
+++ b/openapi/identity-api/0.8.1-SNAPSHOT/identity-api.yaml
@@ -1825,6 +1825,12 @@ components:
           example: null
           items:
             $ref: "#/components/schemas/Permission"
+        profiles:
+          type: array
+          example: null
+          items:
+            type: string
+            example: null
         prohibitions:
           type: array
           example: null
