deploy: f0ebf4607493a54348a4f59126db5eea0ce9d84c

--- a/openapi/identity-api/1.0.0-alpha/identity-api.yaml
+++ b/openapi/identity-api/1.0.0-alpha/identity-api.yaml
@@ -1523,6 +1523,7 @@ components:
           type: object
           additionalProperties:
             type: object
+          writeOnly: true
         id:
           type: string
         type:
