--- a/openapi/identity-api/identity-api.yaml
+++ b/openapi/identity-api/identity-api.yaml
@@ -1523,6 +1523,7 @@ components:
           type: object
           additionalProperties:
             type: object
+          writeOnly: true
         id:
           type: string
         type:
