--- a/openapi/issuer-api/issuer-api.yaml
+++ b/openapi/issuer-api/issuer-api.yaml
@@ -26,6 +26,14 @@ paths:
       description: Requests the issuance of one or several verifiable credentials
         from an issuer
       operationId: requestCredentials
+      parameters:
+      - name: Authorization
+        in: header
+        required: false
+        style: simple
+        explode: false
+        schema:
+          type: string
       requestBody:
         content:
           application/json:
